# void

./: :W  :w  Cargo.toml
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs
hid/: Cargo.toml
hid/src/: lib.rs
models/: test.stl
native/: Cargo.toml
native/src/: main.rs
render/: Cargo.toml
render/src/: gui.rs  renderer.rs
renderer/: Cargo.toml
renderer/src/: gui.rs  lib.rs  renderer.rs
src/: app.rs  camera.rs  db.rs  equirectangular.wgsl  gpu.rs  gui.rs  hdr.rs  hdr.wgsl  instance.rs  integration.rs  io.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  resource.rs  shader.wgsl  sky.wgsl  texture.rs
src/camera/: camera.rs  fps.rs  mod.rs
src/io/: fs.rs  mod.rs
src/io/fs/: mod.rs  obj.rs  stl.rs
src/scene/: env.rs
void_core/: Cargo.toml
void_core/src/: error.rs  lib.rs  newtypes.rs  threadpool.rs
void_core/src/db/: mod.rs
void_engine/: Cargo.toml
void_engine/src/: gui.rs  io.rs  lib.rs  main.rs  render.rs
void_gpu/: Cargo.toml
void_gpu/src/: camera.rs  io.rs  lib.rs  model.rs  texture.rs
void_gpu/src/api/: mod.rs  wgpu_api.rs
void_gpu/src/api/wgpu_api/: api.rs  camera.rs  mod.rs  model.rs  pipeline.rs  shader.wgsl  texture.rs
void_gpu/src/api/wgpu_api/api/: mod.rs  render_ctx.rs  upload_ctx.rs
void_io/: Cargo.toml
void_io/src/: lib.rs  native.rs
void_native/: Cargo.toml
void_native/src/: lib.rs  newtypes.rs
void_render/: Cargo.toml
void_render/src/: gui.rs  lib.rs
void_render/src/renderer/: gui.rs  mod.rs  model.rs  native.rs  scene.rs
void_ui/: Cargo.toml
void_ui/src/: lib.rs  native.rs
void_window/: Cargo.toml
void_window/src/: lib.rs
