[package]
name = "nulus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui-wgpu = "0.25.0"
wgpu = "0.18.0"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
egui-winit = "0.25.0"
egui = "0.25.0"
tokio = { version = "1.36.0", features = ["full"] }
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
 
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
[profile.dev]
opt-level = 1

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

