[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-winit = "0.26.2"
egui-wgpu = "0.26.2"
egui = "0.26.2"
wgpu = "0.19.3"
void_core = { path = "../void_core" }
cfg-if = "1.0.0"
