[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-winit = "0.26.2"
egui-wgpu = "0.26.2"
egui = "0.26.2"
void_core = { path = "../void_core" }
tokio = {version = "1.36.0", features = ["sync"]}
