[package]
name = "void_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
egui = "0.26.2"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"

# standard crate data is left out
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
