[package]
name = "void_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void_core = {path = "../void_core"}
void_render = {path = "../void_render"}
void_io = {path = "../void_io"}
void_ui = {path = "../void_ui"}
void_gpu = {path = "../void_gpu"}
void_window = {path = "../void_window"}
wgpu = "0.19.3"
egui = "0.26.2"
winit = { version = "0.29.7", features = ["rwh_05"] }
tokio = {version = "1.36.0", features = ["full"]}
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
