[package]
name = "void_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version =  "0.19.3"}
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25.0"
tobj = { version = "3.2.1", features = [
    "async",
]}
thiserror = "1.0.58"
void_core = {path = "../void_core"}
rand = "0.8.4"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v6",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "v4",
]
