[package]
name = "void_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void_core = {path = "../void_core"}
void_window = {path = "../void_window"}
void_gpu = {path = "../void_gpu"}
futures = "0.3.30"
log = "0.4.21"

