[package]
name = "void_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui-winit = "0.26.2"
egui-wgpu = "0.26.2"
wgpu = "0.19.3"
egui = "0.26.2"
log = "0.4.21"
bytemuck = { version = "1.14", features = ["derive"] }
void_core = { path = "../void_core" }
void_gpu = {path = "../void_gpu"}
cfg-if = "1.0.0"
