[package]
name = "void_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
void_window = {path = "../void_window"}
log = "0.4.21"
void_core = { path = "../void_core" }
void_gpu = {path = "../void_gpu"}
